--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,17 @@
 version: "3.7"
 services:
+  api:
+    image: libraryapi:latest
+    ports:
+      - 80:80
+    environment:
+      - ConnectionStrings__library=server=database;database=library_dev;user=sa;password=TokyoJoe138!
+      - ConnectionStrings__redis=cache
+      - Rabbit:HostName=messaging
+      - Rabbit:UserName=guest
+      - Rabbit:Password=guest
+      - Rabbit:Port=5672
+      - Rabbit:VHost=/
   cache:
     image: redis:latest
     ports: 
@@ -10,4 +22,16 @@ services:
       - 15671:15671
       - 15672:15672
       - 5672:5672
-    
+  reservationprocessor:
+    image: reservationprocessor:latest
+    environment:
+      - uriString=http://api
+      - Rabbit:HostName=messaging
+      - Rabbit:UserName=guest
+      - Rabbit:Password=guest
+      - Rabbit:Port=5672
+      - Rabbit:VHost=/
+  database:
+    image: jeffrygonzalez/library-sql-apr-2021:latest
+    ports:
+      -1433:1433
